<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="T_SiftClient" Id="{1c2ad872-f3c7-49a0-a706-eb6035798bbf}">
    <Declaration><![CDATA[TYPE T_SiftClient :
STRUCT
	sHost : T_IPv4Addr; // Sift Proxy address.
	nPort : UINT; // Sift Proxy port.
	
	sGrpcUri : STRING(255); // Sift gRPC URI.
	sApiKey : STRING; // Sift API key.
	
	pJsonBuffer : POINTER TO BYTE;
	pJbLength : UDINT;
	
	// TCP function blocks.
   	fbCloseAll 		: FB_SocketCloseAll;
	fbConnect		: FB_SocketConnect;
	fbSend		    : FB_SocketSend;
	fbReceive     	: FB_SocketReceive;
	fbClose			: FB_SocketClose;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>