<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="_F_CreatePingMessage" Id="{f66f2735-207d-4dcd-8e50-ed9c5d150534}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION _F_CreatePingMessage
VAR_INPUT
	stMsg : REFERENCE TO _ST_SiftMessage;
	pJsonBuffer : POINTER TO BYTE;
	nLength : UDINT;
END_VAR

VAR
	sPingRequest : STRING(255) := '{}';
END_VAR

VAR_OUTPUT
	stErr : ST_SiftError;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF pJsonBuffer = 0 THEN
	stErr.bError := TRUE;
	stErr.nErrId := GVL_SIFT.NULL_JSON_POINTER;
	stErr.sReason := 'The JSON buffer is null';
	RETURN;
END_IF

stErr := _F_CreateEndpointMessage(sEndpoint := 'ping', 
                                  pData := ADR(sPingRequest), 
                                  nLength := INT_TO_UDINT(LEN(sPingRequest)), 
                                  nBufferLength := 255, 
                                  stMsg := stMsg);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>